@@ -8,6 +8,7 @@ v0.6.2 (xx xxx 2010)
  * pidgin-privacy-please is now translatable
  * Added option to specifically block OSCAR (ICQ/AIM) authorization requests
  * Added option to block people using a regular expression
+ * Added option to block messages using a regular expression
 
 v0.6.1 (22 Oct 2009)
 ====================
